recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:14: error: Unmatched closing brace '}' ignored here
}
^