recursion.logo.square.FourSquare.scala.code
override def run() {
  for(i <- 1 to 4 ){
    forward(100.0);
    left(90.0);
    forward(100.0);
    left(90.0);
    forward(100.0);
    left(100.0);
    forward(100.0);
    }
  }
}